apps/cve-tracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: laravel
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: nginx
          image: ghcr.io/iamsreepathi/cve-tracker-nginx:sha-c264ff7
          ports:
            - containerPort: 80
              name: nginx
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              subPath: default.conf
              name: nginx-config
        - name: laravel
          image: ghcr.io/iamsreepathi/cve-tracker-php-fpm:sha-c264ff7
          ports:
            - containerPort: 9000
              name: php-fpm
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
