apps/cve-tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laravel
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: laravel
  ports:
    - name: http
      port: 80
      targetPort: 80
